--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -72,13 +72,13 @@ body:
     id: problem-statement
     attributes:
       label: Problem Statement
-      description: What problem does this feature solve? What's the current pain point?
+      description: |
+        Describe the problem this feature would solve and current pain points.
+        Help us understand the "why" behind your request by explaining the challenges you face.
       placeholder: |
-        Currently, when I try to do X, I face the following challenges:
+        Currently, when I try to do X, I face these challenges:
         - Issue 1...
         - Issue 2...
-
-        This makes it difficult to...
     validations:
       required: true
 
@@ -86,13 +86,13 @@ body:
     id: proposed-solution
     attributes:
       label: Proposed Solution
-      description: Describe your ideal solution in detail
+      description: |
+        Describe your ideal solution in detail. What would the feature do?
+        How would it work? Be as specific as possible about the functionality you envision.
       placeholder: |
         I propose adding a feature that would:
         - Functionality 1...
         - Functionality 2...
-
-        This could work by...
     validations:
       required: true
 
@@ -100,11 +100,13 @@ body:
     id: use-cases
     attributes:
       label: Use Cases
-      description: Provide specific examples of how this feature would be used
+      description: |
+        Provide specific examples of how this feature would be used in real scenarios.
+        Use the format: "As a [user type], I want to [action] so that [benefit]"
+        Include different scenarios where this feature would be valuable.
       placeholder: |
         Use Case 1: As a [user type], I want to [action] so that [benefit]
         Use Case 2: When [scenario], this feature would allow [outcome]
-        Use Case 3: In [environment/situation], this would help [result]
     validations:
       required: true
 
@@ -112,46 +114,40 @@ body:
     id: alternatives
     attributes:
       label: Alternatives Considered
-      description: What alternatives have you considered? Why aren't they sufficient?
+      description: |
+        What alternatives have you considered? Why aren't current solutions sufficient?
+        This helps us understand if there are existing workarounds and why they don't meet your needs.
       placeholder: |
         I considered:
         - Alternative 1: [description] - but this doesn't work because...
-        - Alternative 2: [description] - but this has limitations...
         - Current workaround: [description] - but this is problematic because...
 
   - type: textarea
     id: implementation-ideas
     attributes:
       label: Implementation Ideas
-      description: Do you have ideas about how this could be implemented? (Optional)
+      description: |
+        Do you have ideas about how this could be implemented? (Optional)
+        Consider technical aspects like platform compatibility, security implications, and performance impact.
+        This is helpful but not required - our developers will design the implementation.
       placeholder: |
         This could potentially be implemented by:
         - Adding a new module that...
         - Modifying the existing [component] to...
-        - Creating a new command/API that...
-
-        Technical considerations:
-        - Platform compatibility...
-        - Security implications...
-        - Performance impact...
 
   - type: textarea
     id: mockups-examples
     attributes:
       label: Mockups/Examples
-      description: Visual mockups, command examples, or API examples (if applicable)
+      description: |
+        Provide visual mockups, command examples, or API examples if applicable.
+        Show us what the feature would look like in action - this really helps with understanding your vision!
       placeholder: |
         Command example:
-        ```
         emp3r0r> new_feature --option value
-        ```
 
         Expected output:
-        ```
         Feature working as expected...
-        ```
-
-        UI mockup: [attach image or describe interface]
       render: text
 
   - type: checkboxes
@@ -186,14 +182,14 @@ body:
     id: additional-context
     attributes:
       label: Additional Context
-      description: Any other relevant information
-      placeholder: |
+      description: |
+        Any other relevant information that would help us understand and implement this feature:
         - Links to related tools/features in other projects
-        - References to documentation or standards
+        - References to documentation or standards  
         - Screenshots or examples from other tools
-        - Timeline considerations
-        - Resource requirements
-        - Any other context that might help
+        - Timeline considerations or urgency
+        - Resource requirements or constraints
+      placeholder: "Any additional context, links, or relevant information..."
 
   - type: checkboxes
     id: contribution
