--- a/.github/ISSUE_TEMPLATE/question.yml
+++ b/.github/ISSUE_TEMPLATE/question.yml
@@ -11,6 +11,13 @@ body:
 
         **Note**: For general discussions, consider using [GitHub Discussions](https://github.com/jm33-m0/emp3r0r/discussions) instead.
 
+        ---
+
+        💖 **Support the Project**: If emp3r0r has been helpful to you, consider [sponsoring the project](https://github.com/sponsors/jm33-m0) to support ongoing development and maintenance!
+
+
+        ⚠️ **Important Notice**: Non-critical questions may be ignored or deprioritized due to limited volunteer time. For guaranteed support and timely responses, please consider [sponsoring the project](https://github.com/sponsors/jm33-m0) or reaching out for paid support options.
+
   - type: checkboxes
     id: prerequisites
     attributes:
