fix: garbage charaters being printed in tmux
see https://github.com/microsoft/terminal/issues/18004

--- a/core/tmux/.tmux.conf
+++ b/core/tmux/.tmux.conf
@@ -7,6 +7,7 @@ setw -g xterm-keys on
 set -s escape-time 10                     # faster command sequences
 set -sg repeat-time 600                   # increase repeat timeout
 set -s focus-events on
+set-option -sg escape-time 40
 
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
